--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@ code {
   width: 50px;
 }
 
+.cari{
+  height: 10px;
+  width: 10px;
+  padding-right: 5px;
+}
+
 .navbar{
   display: flex;
   flex-direction: row-reverse;
@@ -31,9 +37,19 @@ code {
 }
 
 .search{
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: flex;
+  justify-self: flex-end;
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  background-color: rgb(220, 220, 220);
+  border-radius: 10px;
+}
+
+.search input{
+  border: none;
+  background-color: rgb(220, 220, 220);
 }
 
 .garis{
